--- a/Starter_Code/NoSQL_setup_starter.ipynb
+++ b/Starter_Code/NoSQL_setup_starter.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,17 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7f9ececa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['admin', 'config', 'local', 'uk_food']\n"
+     ]
+    }
+   ],
    "source": [
-    "# confirm that our new database was created\n"
+    "# confirm that our new database was created\n",
+    "print(mongo.list_database_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -74,37 +83,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ef1b89ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['establishments']\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "18ab463c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "establishments = db['establishments']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6a0d92df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '1',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# review a document in the establishments collection\n"
+    "# review a document in the establishments collection\n",
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -131,32 +178,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Create a dictionary for the new restaurant data\n",
+    "new_restaurant = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x227ab97efc0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Insert the new restaurant into the collection\n",
+    "establishments.insert_one(new_restaurant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "63bb10f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
+       " 'BusinessName': 'Penang Flavours',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': '1',\n",
+       " 'AddressLine1': 'Penang Flavours',\n",
+       " 'AddressLine2': '146A Plumstead Rd',\n",
+       " 'AddressLine3': 'London',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'SE18 7DY',\n",
+       " 'Phone': '',\n",
+       " 'LocalAuthorityCode': '511',\n",
+       " 'LocalAuthorityName': 'Greenwich',\n",
+       " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+       " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4623.972328074718,\n",
+       " 'NewRatingPending': True}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Check that the new restaurant was inserted\n",
+    "establishments.find_one({'BusinessName':'Penang Flavours'})"
    ]
   },
   {
@@ -169,12 +287,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': '1'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "query = {'BusinessType': 'Restaurant/Cafe/Canteen'}\n",
+    "fields = ['BusinessTypeID', 'BusinessType']\n",
+    "\n",
+    "establishments.find_one(query, fields)"
    ]
   },
   {
@@ -187,22 +322,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7f599f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x227ab9db340>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Update the new restaurant with the correct BusinessTypeID\n"
+    "# Update the new restaurant with the correct BusinessTypeID\n",
+    "establishments.update_one({'BusinessName':'Penang Flavours'},\\\n",
+    "                         {'$set': {'BusinessTypeID': '1'}})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
+       " 'BusinessName': 'Penang Flavours',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': '1',\n",
+       " 'AddressLine1': 'Penang Flavours',\n",
+       " 'AddressLine2': '146A Plumstead Rd',\n",
+       " 'AddressLine3': 'London',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'SE18 7DY',\n",
+       " 'Phone': '',\n",
+       " 'LocalAuthorityCode': '511',\n",
+       " 'LocalAuthorityName': 'Greenwich',\n",
+       " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+       " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4623.972328074718,\n",
+       " 'NewRatingPending': True}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirm that the new restaurant was updated\n",
+    "establishments.find_one({'BusinessName':'Penang Flavours'})"
    ]
   },
   {
@@ -215,42 +394,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "768474a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "dover = establishments.count_documents({\"LocalAuthorityName\": \"Dover\"})\n",
+    "dover"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a11d5f1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x227ab9e23c0>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
+    "establishments.delete_many(\n",
+    "    {\"LocalAuthorityName\": \"Dover\"}\n",
+    "\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2a51aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "dover = establishments.count_documents({\"LocalAuthorityName\": \"Dover\"})\n",
+    "dover"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "8c356f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '1',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "pprint(establishments.find_one())"
    ]
   },
   {
@@ -273,12 +521,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x227ab9b8240>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "establishments.update_many({},[{\"$set\": {\"geocode.longitude\":\n",
+    "                                         {\"$toDouble\": \"$geocode.longitude\"},\n",
+    "                                            \"geocode.latitude\": {\n",
+    "                                                \"$toDouble\": \"$geocode.latitude\"\n",
+    "                                            }\n",
+    "                                        }}])"
    ]
   },
   {
@@ -292,10 +557,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x227ab9e1f80>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -304,22 +580,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x227ab84d300>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({}, [ {'$set':{ \"RatingValue\" : {'$toInt': \"$RatingValue\"}}} ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0deacaf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '1',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RatingValue': None,\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
+    "# Check that the coordinates and rating value are now numbers\n",
+    "pprint(establishments.find_one())"
    ]
   }
  ],
@@ -339,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
