--- a/Starter_Code/NoSQL_analysis_starter.ipynb
+++ b/Starter_Code/NoSQL_analysis_starter.ipynb
@@ -18,19 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import dependencies\n",
     "from pymongo import MongoClient\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -52,23 +53,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "18ab463c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['establishments']\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our database\n"
+    "# review the collections in our database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# assign the collection to a variable\n",
     "establishments = db['establishments']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9932073c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '1',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RatingValue': None,\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
@@ -93,31 +141,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c2da7648",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Within establishments there are 0 establishments with a hygiene score of 20!\n",
+      "\n",
+      "---------------------------------------------------------------------------\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find the establishments with a hygiene score of 20\n",
-    "query =\n",
+    "# Find the establishments with a hygiene score of 20 (within 'scores')\n",
+    "query = {'scores.Hygiene': 20}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
-    "\n",
-    "# Display the first document in the results using pprint\n"
+    "hygiene_20 = establishments.count_documents(query)\n",
+    "# Display the first document in the results using pprint\n",
+    "print (f'Within establishments there are {hygiene_20} establishments with a hygiene score of 20!\\n')\n",
+    "print('-'*75 + '\\n')       \n",
+    "pprint(establishments.find_one(query))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in DataFrame:  0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "query = {'scores.Hygiene': 20}\n",
+    "results = establishments.find(query)\n",
     "# Convert the result to a Pandas DataFrame\n",
-    "\n",
+    "df = pd.DataFrame(results)\n",
     "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "print(\"Rows in DataFrame: \", len(df))\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "df.head(10)\n"
    ]
   },
   {
@@ -130,31 +242,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Within establishments there are 0 establishments with a Rating greater or     equal to 4!\n",
+      "\n",
+      "---------------------------------------------------------------------------\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the establishments with London as the Local Authority and has a RatingValue greater than or equal to 4.\n",
-    "query =\n",
+    "query_a = {'LocalAuthorityName': {'$regex': 'London'},\\\n",
+    "           'RatingValue': {'$gte': '4'}}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
-    "\n",
-    "# Display the first document in the results using pprint\n"
+    "a = establishments.count_documents(query_a)\n",
+    "# Display the first document in the results using pprint\n",
+    "print (f'Within establishments there are {a} establishments with a Rating greater or     equal to 4!\\n')\n",
+    "print('-'*75 + '\\n')       \n",
+    "pprint(establishments.find_one(query_a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "07e24ccb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in DataFrame:  0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "results_a = establishments.find(query_a)\n",
     "# Convert the result to a Pandas DataFrame\n",
-    "\n",
+    "df_2 = pd.DataFrame(establishments.find(query_a))\n",
     "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "print(\"Rows in DataFrame: \", len(df_2))\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "df_2.head(10)"
    ]
   },
   {
@@ -168,33 +344,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "51fa244b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check for latitude and longitude of \"Penang Flavours\"\n",
+    "pprint(establishments.find_one({'BusinessName': 'Penang Flavours'},\\\n",
+    "                    {'geocode.latitude': 1, 'geocode.longitude': 1}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Search within 0.01 degree on either side of the latitude and longitude.\n",
     "# Rating value must equal 5\n",
-    "# Sort by hygiene score\n",
+    "# Sort by hygiene score by ascending order (lowest to highest)\n",
     "\n",
     "degree_search = 0.01\n",
-    "latitude = \n",
-    "longitude = \n",
+    "latitude = 51.490142\n",
+    "longitude = 0.08384\n",
     "\n",
-    "query = \n",
-    "sort =  \n",
-    "\n",
-    "# Print the results\n"
+    "query_b = {'RatingValue': {'$regex': '5'}, \n",
+    "         'geocode.latitude':{'$lte': (latitude + degree_search),\\\n",
+    "                             '$gte': (latitude - degree_search)}, \n",
+    "         'geocode.longitude':{'$lte': (longitude + degree_search),\\\n",
+    "                              '$gte': (longitude - degree_search)}}\n",
+    "sort =  [('scores.Hygiene', 1)]\n",
+    "# Print the results\n",
+    "results = establishments.find(query_b).sort(sort).limit(5)\n",
+    "for x in results:\n",
+    "    pprint(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Convert result to Pandas DataFrame\n"
+    "# Convert result to Pandas DataFrame\n",
+    "pd.DataFrame(establishments.find(query_b).sort(sort).limit(5))"
    ]
   },
   {
@@ -207,33 +450,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4eeb227e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of documents:  0\n",
+      "---------------------------------------------------------------------------\n",
+      "\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a pipeline that: \n",
     "# 1. Matches establishments with a hygiene score of 0\n",
+    "match_query = {'$match': {'scores.Hygiene': 0}}\n",
+    "\n",
     "# 2. Groups the matches by Local Authority\n",
+    "group_query = {'$group': {'_id': '$LocalAuthorityName',\\\n",
+    "                          'count': {'$sum': 1}}}\n",
+    "\n",
     "# 3. Sorts the matches from highest to lowest\n",
+    "sort_query = {'$sort': {'count': -1}}\n",
+    "\n",
+    "# 4. Put the pipeline together\n",
+    "pipeline = [match_query, group_query, sort_query]\n",
+    "\n",
+    "# 5.Run the pipeline through the aggregate method and save the results to a variable\n",
+    "results_1 = list(establishments.aggregate(pipeline))\n",
     "\n",
     "# Print the number of documents in the result\n",
-    "\n",
-    "# Print the first 10 results\n"
+    "print(\"Number of documents: \", len(results_1))\n",
+    "print('-'*75 + '\\n')\n",
+    "# Print the first 10 results\n",
+    "pprint(results_1[0:10])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d8aab364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows:  0\n",
+      "---------------------------------------------------------------------------\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
-    "\n",
+    "result_df = pd.DataFrame(results_1)\n",
     "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "print(\"Number of rows: \", len(results_1))\n",
+    "print('-'*75 + '\\n')\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "result_df.head(10)\n"
    ]
   }
  ],
@@ -253,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
