--- a/Starter_Code/NoSQL_setup_starter.ipynb
+++ b/Starter_Code/NoSQL_setup_starter.ipynb
@@ -136,10 +136,11 @@
       " 'NewRatingPending': True,\n",
       " 'Phone': '',\n",
       " 'PostCode': 'SE18 7DY',\n",
+      " 'RatingValue': None,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -223,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x227ab97efc0>"
+       "<pymongo.results.InsertOneResult at 0x1a963a8bac0>"
       ]
      },
      "execution_count": 10,
@@ -261,10 +262,11 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'geocode': {'longitude': 0.08384, 'latitude': 51.490142},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
-       " 'NewRatingPending': True}"
+       " 'NewRatingPending': True,\n",
+       " 'RatingValue': None}"
       ]
      },
      "execution_count": 11,
@@ -329,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x227ab9db340>"
+       "<pymongo.results.UpdateResult at 0x1a9657bb540>"
       ]
      },
      "execution_count": 13,
@@ -368,10 +370,11 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'geocode': {'longitude': 0.08384, 'latitude': 51.490142},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
-       " 'NewRatingPending': True}"
+       " 'NewRatingPending': True,\n",
+       " 'RatingValue': None}"
       ]
      },
      "execution_count": 14,
@@ -394,7 +397,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
+   "id": "bafdc758",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find how many documents in establishment\n",
+    "establishments.count_documents({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -404,7 +429,7 @@
        "0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,17 +442,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x227ab9e23c0>"
+       "<pymongo.results.DeleteResult at 0x1a9657f3640>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -452,7 +477,7 @@
        "0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -488,10 +513,11 @@
       " 'NewRatingPending': True,\n",
       " 'Phone': '',\n",
       " 'PostCode': 'SE18 7DY',\n",
+      " 'RatingValue': None,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -521,17 +547,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x227ab9b8240>"
+       "<pymongo.results.UpdateResult at 0x1a9657f1800>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,17 +583,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x227ab9e1f80>"
+       "<pymongo.results.UpdateResult at 0x1a9657f1bc0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
@@ -610,33 +636,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'Penang Flavours',\n",
-      " 'AddressLine2': '146A Plumstead Rd',\n",
-      " 'AddressLine3': 'London',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Penang Flavours',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': '1',\n",
-      " 'Distance': 4623.972328074718,\n",
-      " 'LocalAuthorityCode': '511',\n",
-      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
-      " 'LocalAuthorityName': 'Greenwich',\n",
-      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
-      " 'NewRatingPending': True,\n",
-      " 'Phone': '',\n",
-      " 'PostCode': 'SE18 7DY',\n",
-      " 'RatingValue': None,\n",
-      " 'RightToReply': '',\n",
-      " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
-      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
-      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
+      "{'_id': ObjectId('6671f576cab41aa9bc86b956'),\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384}}\n",
+      "{'_id': ObjectId('6676cfcb45c1f5ad6db0c7d4'),\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384}}\n",
+      "{'_id': ObjectId('66789aa6a06e32a04171f087'),\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384}}\n"
      ]
     }
    ],
    "source": [
     "# Check that the coordinates and rating value are now numbers\n",
-    "pprint(establishments.find_one())"
+    "query = {'geocode.longitude', 'geocode.latitude'}\n",
+    "results = establishments.find({},query)\n",
+    "for i in results:\n",
+    "    pprint(i)"
    ]
   }
  ],
