--- a/Starter_Code/NoSQL_analysis_starter.ipynb
+++ b/Starter_Code/NoSQL_analysis_starter.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "0cf1979e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['admin', 'config', 'local', 'uk_food']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confirm that \"uk_food\" database is in MongoDb\n",
+    "print(mongo.list_database_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -53,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "18ab463c",
    "metadata": {},
    "outputs": [
@@ -72,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -83,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9932073c",
    "metadata": {},
    "outputs": [
@@ -141,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [
